:bug: Fixing the overflow issue where the top cannot be scrolled to when the list of todoItems occupy more than the height of the page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -458,7 +458,7 @@ input:focus, textarea:focus, select:focus, button:focus {
 
 body, html {
   position: relative;
-  height: 100%; }
+  /* height: 100%; */ }
 
 body {
   font-family: "Lato", sans-serif;
